# substack-api

./: CLAUDE.md  pyproject.toml
.claude/agents/: debugger.md  python-coder.md  reviewer.md  tester.md
.claude/skills/feature/: SKILL.md
.claude/skills/test/: SKILL.md
app/: auth.py  config.py  dependencies.py  main.py
app/models/: __init__.py  category.py  reminder_log.py  subscription.py  subscription_price_history.py  user.py
app/routers/: auth.py  categories.py  reminders.py  subscriptions.py  users.py
app/schemas/: __init__.py  category.py  reminder.py  subscription.py  user.py
app/services/: email.py  scheduler.py
tests/: conftest.py  test_auth.py  test_categories.py  test_monthly_costs.py  test_reminders.py  test_scheduler.py  test_search_filter.py  test_spending_analytics.py  test_subscriptions.py
